# ChessMatchmaking

./: .gitignore  CMakeLists.txt  README.md
src/: manager.cpp  server.cpp
src/client/: main.cpp
src/server/: main.cpp  manager.hpp  player.cpp  player.hpp  server.hpp
